--- a/package.json
+++ b/package.json
@@ -3,21 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "vite --host",
+    "build": "vite build",
+    "serve": "vite preview",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "@babel/runtime": "^7.19.0",
+    "core-js": "^3.25.5",
+    "pinia": "^2.0.0-rc.10",
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
+    "@vitejs/plugin-legacy": "^2.2.0",
+    "@vitejs/plugin-vue": "^1.6.1",
+    "@vue/cli-plugin-babel": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vite": "^3.1.4",
+    "vite-plugin-vue2": "1.9.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -34,9 +41,14 @@
     },
     "rules": {}
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  "browserslist": {
+    "production": [
+      "Chrome > 41",
+      "ie 11"
+    ],
+    "development": [
+      "Chrome > 41",
+      "ie 11"
+    ]
+  }
 }
